# api/pokemons.go
@@ -1,17 +1,27 @@
 package api
 
 import (
+	"context"
+	"database/sql"
 	"go-react-embed/models"
+	"go-react-embed/rbac"
 	"net/http"
 	"strconv"
 
 	"github.com/labstack/echo/v4"
 )
 
-func RegisterPokemonsHandlers(e *echo.Group) {
-	e.GET("/pokemons", getPokemonsHandler)
-	e.GET("/pokemons/:id", getPokemonHandler)
-	e.GET("/pokemons/name/:name", getPokemonByNameHandler)
+type PokemonHandler struct {
+	CTX     context.Context
+	QUERIES *models.Queries
+	DB      *sql.DB
+	RBAC    rbac.RBAC
+}
+
+func (h PokemonHandler) RegisterHandlers(e *echo.Group) {
+	e.GET("/pokemons", h.getPokemonsHandler)
+	e.GET("/pokemons/:id", h.getPokemonHandler)
+	e.GET("/pokemons/name/:name", h.getPokemonByNameHandler)
 }
 
 // @Summary Get All Pokemons
@@ -22,14 +32,16 @@ func RegisterPokemonsHandlers(e *echo.Group) {
 // @Produce json
 // @Success 200 {string} string "ok"
 // @Router /api/pokemons [get]
-func getPokemonsHandler(c echo.Context) error {
+func (h PokemonHandler) getPokemonsHandler(c echo.Context) error {
 	// get current user and roles from context
 
 	// check if user has permission
 	// IsAllowed(user, "permission") bool
 
+	// TODO read this and do some changes to reduce the code
+	// https://dev.to/geoff89/deploying-a-golang-restful-api-with-gin-sqlc-and-postgresql-1lbl#implementing-crud-in-golang-rest-api
+
 	
-	var args models.ListPokemonsOffsetParams
 	limitQuery := c.QueryParam("limit")
 	limit, err := strconv.ParseInt(limitQuery, 10, 32)
 	if err != nil {
@@ -41,19 +53,24 @@ func getPokemonsHandler(c echo.Context) error {
 		offset = 0
 	}
 
+	var args models.ListPokemonsOffsetParams
 	args.Limit = limit
 	args.Offset = offset
+	// args := &models.ListPokemonsOffsetParams{
+    //     Limit:  limit,
+    //     Offset: offset,
+    // }
 
-	pokemonsCount, err := models.QUERIES.GetPokemonsCount(models.CTX)
+	pokemonsCount, err := h.QUERIES.GetPokemonsCount(h.CTX)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
 	}
-	pokemons, err := models.QUERIES.ListPokemonsOffset(models.CTX, args)
+	pokemons, err := h.QUERIES.ListPokemonsOffset(h.CTX, args)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
 	}
 	return c.JSON(http.StatusOK, echo.Map{
-		"count": pokemonsCount,
+		"count": pokemonsCount[0],
 		"limit": int(limit),
 		"offset": int(offset),
 		"result": pokemons,
@@ -73,13 +90,31 @@ type PokemonResult struct {
 // @Produce json
 // @Success 200 {object} PokemonResult
 // @Router /api/pokemons/{id} [get]
-func getPokemonHandler(c echo.Context) error {
+func (h PokemonHandler) getPokemonHandler(c echo.Context) error {
+	// ctxUser := GetUserFromContext(c)
+	// if ctxUser.ID == 0 {
+	// 	return echo.NewHTTPError(http.StatusUnauthorized, "Not Authenticated")
+	// }
+	
+	// user := rbac.Map{
+	// 	"id": ctxUser.ID, 
+	// 	"name": ctxUser.Name, 
+	// 	"roles": ctxUser.Roles,
+	// }
+	// resource := rbac.Map{"id": 3, "title": "tutorial", "owner": 3, "list": []int{1, 2, 3, 4, 5, 6}}
+
+	// allowed, err := h.RBAC.IsAllowed(user, resource, "edit_user")
+	// if err != nil {
+	// 	fmt.Println("++++ error: ", err.Error())
+	// }
+	// fmt.Println("-allowed to get pokemon:", allowed)
+
 	param := c.Param("id")
 	id, err := strconv.ParseInt(param, 10, 64)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusBadRequest, "id param must be integer")
 	}
-	pokemon, err := models.QUERIES.GetPokemon(models.CTX, id)
+	pokemon, err := h.QUERIES.GetPokemon(h.CTX, id)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusNotFound, "no rows in result set")
 	}
@@ -95,9 +130,9 @@ func getPokemonHandler(c echo.Context) error {
 // @Produce json
 // @Success 200 {object} PokemonResult
 // @Router /api/pokemons/name/{name} [get]
-func getPokemonByNameHandler(c echo.Context) error {
+func (h PokemonHandler) getPokemonByNameHandler(c echo.Context) error {
 	name := c.Param("name")
-	pokemon, err := models.QUERIES.GetPokemonByName(models.CTX, name)
+	pokemon, err := h.QUERIES.GetPokemonByName(h.CTX, name)
 	if err != nil {
 		return echo.NewHTTPError(http.StatusNotFound, "no rows in result set")
 	}
